--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -1,6 +1,7 @@
 /**
- * Componentes UI - Restaurante da Célia
+ * Componentes UI - Marmita.One
  * Sistema de componentes reutilizáveis
+ * v0.1.0-beta
  */
 
 /* === LAYOUT === */
