--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,6 +1,7 @@
 /**
- * Reset CSS Moderno - Restaurante da Célia
+ * Reset CSS Moderno - Marmita.One
  * Base consistente para todos os navegadores
+ * v0.1.0-beta
  */
 
 /* === RESET BÁSICO === */
