--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,6 +1,7 @@
 /**
- * Design System - Restaurante da Célia
+ * Design System - Marmita.One
  * Variáveis CSS organizadas e consistentes
+ * v0.1.0-beta
  */
 
 :root {
